# ComfyUI-FunAudioLLM

./: README.md  __init__.py  pyproject.toml  requirements.txt
cosyvoice/cli/: cosyvoice.py
funaudio_utils/: cosyvoice_plus.py  download_models.py
nodes/: __init__.py  cosyvoice_nodes.py  sensevoice_nodes.py
utils/: download_models.py  pre.py
workflow/: FunAudioLLM.json
